--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES2015",
+    "target": "ESNext",
     "module": "commonjs",
     "strict": true,
     "esModuleInterop": true,
@@ -10,6 +10,6 @@
     "preserveConstEnums": true,
     "sourceMap": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "test/**/*.spec.ts"]
+  "include": ["src/**/*", "test/**/*.spec.ts"],
+  "exclude": ["node_modules"]
 }
